Bug 915328 - Add support for cross-slide gesture to APZC [r=kats]